fix align

--- a/website_styles.css
+++ b/website_styles.css
@@ -39,12 +39,14 @@ body {
   text-align: center;
   text-decoration:none;
   display:inline;
+  position: relative;
 }
 
 
 /*make the left most menu link to be displayed on the page*/
 #left-most-button {
   margin-left:40px;
+  float:left;
 }
 
 /* when the mouse is hovering over the link/button of the menu */
@@ -58,7 +60,7 @@ body {
 .dropdown-content {
   display:none;
   background-color: #F5F5F5;
-  position: absolute;
+  position: relative;
   box-shadow:0px 8px 10px 0px #DCDCDC;
 }
 
@@ -84,4 +86,11 @@ body {
 /* shows the drop down menu*/
 .show {
   display:block;
+}
+
+
+.hidden-align{
+  float:left;
+  margin-left:20px;
+  position:absolute
 }
